WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11639
Form buttons don't look different when clicked
https://bugs.webkit.org/show_bug.cgi?id=11639
Summary
Form buttons don't look different when clicked
Kirby White
Reported
2006-11-17 17:52:56 PST
Form buttons don't show an active state when they're clicked. They keep showing hover until they're inactive again. This is the case for both buttons and input elements. Simple testcase: <html><head></head><body> <form> <input type=submit name=input value="Input"></input> <button type=submit name=button value="Button">Button</button> </form> </body></html>
Attachments
Makes active: override hover:
(1.45 KB, patch)
2006-11-17 18:42 PST
,
Kirby White
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kirby White
Comment 1
2006-11-17 18:42:02 PST
Created
attachment 11560
[details]
Makes active: override hover: Do I need a new testcase? How do I find out which testcase failed because of this bug, or make one that would?
Alexey Proskuryakov
Comment 2
2006-12-05 04:42:17 PST
Comment on
attachment 11560
[details]
Makes active: override hover: r=me I don't think an automated test can be made for this issue - and adding manual test seems to be an overkill.
Alexey Proskuryakov
Comment 3
2006-12-05 04:46:48 PST
Committed revision 18020. Made the same change to RenderThemeGdk (it's sad that this logic is duplicated!)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug