WebCore/platform/gdk/RenderThemeGdk.cpp
@@ -109,10 +109,10 @@ unsigned RenderThemeGdk::determineState(RenderObject* o)
         result = TFS_READONLY; // Readonly is supported on textfields.
     else if (supportsFocus(o->style()->appearance()) && isFocused(o))
         result = TS_FOCUSED;
-    else if (isHovered(o))
-        result = TS_HOVER;
     else if (isPressed(o))
         result = TS_ACTIVE;
+    else if (isHovered(o))
+        result = TS_HOVER;
     if (isChecked(o))
         result += 4; // 4 unchecked states, 4 checked states.
     return result;
